--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,15 @@
 /* TODO Add site wide styles */
+
+div.title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 48px;
+    font-weight: bold;
+    color: coral;
+}
+
+.nav-bar {
+    display: grid;
+    margin-right: 10px;
+}
