--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,5 +1,6 @@
 .nav-bar {
     display:flex;
-    flex-direction: column;
-    align-items: flex-end;
+    justify-content: space-between;
+    margin-top: 15px;
+    margin-bottom: 20px;
 }
