added govName and location to Users model

--- a/frontend/src/components/UserSquare/UserSquare.css
+++ b/frontend/src/components/UserSquare/UserSquare.css
@@ -3,7 +3,8 @@
     border: 10px;
 }
 
-.profileLink {
-    display: flex; 
+.profileLink a{
+    display: flex;
     justify-content: center;
+    text-decoration: none;
 }
