--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     margin: 80px auto;
+    margin-top: 0px; 
 }
 
 label{
@@ -19,4 +20,10 @@ label{
     padding: 10px;
     height: 40px;
     width: 120px;
+}
+
+.imgDiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
